<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txt_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/nombre_del_archivo"
        app:layout_constraintStart_toEndOf="@+id/imageViewFoto"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_categoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/categoria"
        app:layout_constraintStart_toEndOf="@+id/imageViewFoto"
        app:layout_constraintTop_toBottomOf="@+id/txt_nombre" />

    <TextView
        android:id="@+id/txt_descripcion"
        android:layout_width="131dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/descripcion_rapida"
        app:layout_constraintStart_toEndOf="@+id/imageViewFoto"
        app:layout_constraintTop_toBottomOf="@+id/txt_categoria" />

    <ImageView
        android:id="@+id/imageViewFoto"
        android:layout_width="152dp"
        android:layout_height="119dp"
        android:contentDescription="@string/contenido_de_foto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.09"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <Button
        android:id="@+id/btn_abrir"
        android:layout_width="86dp"
        android:layout_height="39dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/abrir"
        app:layout_constraintStart_toEndOf="@+id/imageViewFoto"
        app:layout_constraintTop_toBottomOf="@+id/txt_descripcion" />

    <Button
        android:id="@+id/btn_borrar"
        android:layout_width="89dp"
        android:layout_height="38dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginBottom="4dp"
        android:text="@string/borrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>